[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/key/door.png" type="Texture" id=1]
[ext_resource path="res://door.gd" type="Script" id=2]
[ext_resource path="res://src/key/dooropen.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "open",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.5, 37 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 53.5, 23 )

[node name="Door" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "closed"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0 )
shape = SubResource( 2 )

[node name="NearDoor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NearDoor"]
position = Vector2( -0.5, 0 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]
[connection signal="body_entered" from="NearDoor" to="." method="_on_NearDoor_body_entered"]
